Add features section

--- a/index.html
+++ b/index.html
@@ -66,6 +66,52 @@
           </article>
         </div>
       </section>
+      <section class="features container nunito-font">
+        <h2 class="text-center">Affordable, good quality.</h2>
+        <p class="text-center">Lacus purus eu, mauris pretium mollis ac id mauris eget. Id diam enim faucibus pellentesque mi massa. Nmet nullam sed habitasse dignissim viverra congue nisl</p>
+        <div class="features-cards-wrapper flex items-center justify-center flex-wrap">
+          <article class="feature-card flex items-center">
+            <div class="feature-card-image">
+              <img src="./images/feature-1.png" alt="Thrust power illustration" loading="lazy">
+            </div>
+            <div class="feature-card-content">
+              <h3>Million pounds of thrust</h3>
+              <p>Eget mattis viverra in lorem dictum consequat etiam non pellentesque mauris diamprice ore</p>
+              <a href="#">Learn more</a>
+            </div>
+          </article>
+          <article class="feature-card flex items-center">
+            <div class="feature-card-image">
+              <img src="./images/feature-2.png" alt="Missions illustration" loading="lazy">
+            </div>
+            <div class="feature-card-content">
+              <h3>More than 1,300 missions</h3>
+              <p>Eget mattis viverra in lorem dictum consequat etiam non pellentesque mauris diamprice ore</p>
+              <a href="#">Learn more</a>
+            </div>
+          </article>
+          <article class="feature-card flex items-center">
+            <div class="feature-card-image">
+              <img src="./images/feature-3.png" alt="Atlas launched Friendship illustration" loading="lazy">
+            </div>
+            <div class="feature-card-content">
+              <h3>Atlas launched Friendship</h3>
+              <p>Eget mattis viverra in lorem dictum consequat etiam non pellentesque mauris diamprice ore</p>
+              <a href="#">Learn more</a>
+            </div>
+          </article>
+          <article class="feature-card flex items-center">
+            <div class="feature-card-image">
+              <img src="./images/feature-4.png" alt="Separate spacecraft illustration" loading="lazy">
+            </div>
+            <div class="feature-card-content">
+              <h3>Separate spacecraft</h3>
+              <p>Eget mattis viverra in lorem dictum consequat etiam non pellentesque mauris diamprice ore</p>
+              <a href="#">Learn more</a>
+            </div>
+          </article>
+        </div>
+      </section>
     </main>
   </body>
 </html>
