--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./styles.css" />
     <title>Document</title>
   </head>
   <body>
@@ -21,7 +21,9 @@
           faucibus pellentesque mi massa. Nmet nullam sed habitasse dignissim
           viverra congue nisl
         </p>
-        <div class="products-cards-wrapper flex items-center justify-center flex-wrap">
+        <div
+          class="products-cards-wrapper flex items-center justify-center flex-wrap"
+        >
           <article class="text-center">
             <h3><a href="#">Solid Fuel</a></h3>
             <p>
@@ -68,48 +70,120 @@
       </section>
       <section class="features container nunito-font">
         <h2 class="text-center">Affordable, good quality.</h2>
-        <p class="text-center">Lacus purus eu, mauris pretium mollis ac id mauris eget. Id diam enim faucibus pellentesque mi massa. Nmet nullam sed habitasse dignissim viverra congue nisl</p>
-        <div class="features-cards-wrapper flex items-center justify-center flex-wrap">
+        <p class="text-center">
+          Lacus purus eu, mauris pretium mollis ac id mauris eget. Id diam enim
+          faucibus pellentesque mi massa. Nmet nullam sed habitasse dignissim
+          viverra congue nisl
+        </p>
+        <div
+          class="features-cards-wrapper flex items-center justify-center flex-wrap"
+        >
           <article class="feature-card flex items-center">
             <div class="feature-card-image">
-              <img src="./images/feature-1.png" alt="Thrust power illustration" loading="lazy">
+              <img
+                src="./images/feature-1.png"
+                alt="Thrust power illustration"
+                loading="lazy"
+              />
             </div>
             <div class="feature-card-content">
               <h3>Million pounds of thrust</h3>
-              <p>Eget mattis viverra in lorem dictum consequat etiam non pellentesque mauris diamprice ore</p>
+              <p>
+                Eget mattis viverra in lorem dictum consequat etiam non
+                pellentesque mauris diamprice ore
+              </p>
               <a href="#">Learn more</a>
             </div>
           </article>
           <article class="feature-card flex items-center">
             <div class="feature-card-image">
-              <img src="./images/feature-2.png" alt="Missions illustration" loading="lazy">
+              <img
+                src="./images/feature-2.png"
+                alt="Missions illustration"
+                loading="lazy"
+              />
             </div>
             <div class="feature-card-content">
               <h3>More than 1,300 missions</h3>
-              <p>Eget mattis viverra in lorem dictum consequat etiam non pellentesque mauris diamprice ore</p>
+              <p>
+                Eget mattis viverra in lorem dictum consequat etiam non
+                pellentesque mauris diamprice ore
+              </p>
               <a href="#">Learn more</a>
             </div>
           </article>
           <article class="feature-card flex items-center">
             <div class="feature-card-image">
-              <img src="./images/feature-3.png" alt="Atlas launched Friendship illustration" loading="lazy">
+              <img
+                src="./images/feature-3.png"
+                alt="Atlas launched Friendship illustration"
+                loading="lazy"
+              />
             </div>
             <div class="feature-card-content">
               <h3>Atlas launched Friendship</h3>
-              <p>Eget mattis viverra in lorem dictum consequat etiam non pellentesque mauris diamprice ore</p>
+              <p>
+                Eget mattis viverra in lorem dictum consequat etiam non
+                pellentesque mauris diamprice ore
+              </p>
               <a href="#">Learn more</a>
             </div>
           </article>
           <article class="feature-card flex items-center">
             <div class="feature-card-image">
-              <img src="./images/feature-4.png" alt="Separate spacecraft illustration" loading="lazy">
+              <img
+                src="./images/feature-4.png"
+                alt="Separate spacecraft illustration"
+                loading="lazy"
+              />
             </div>
             <div class="feature-card-content">
               <h3>Separate spacecraft</h3>
-              <p>Eget mattis viverra in lorem dictum consequat etiam non pellentesque mauris diamprice ore</p>
+              <p>
+                Eget mattis viverra in lorem dictum consequat etiam non
+                pellentesque mauris diamprice ore
+              </p>
               <a href="#">Learn more</a>
             </div>
           </article>
+        </div>
+      </section>
+      <section class="blog">
+        <div class="blog-container nunito-font flex">
+          <article class="blog-content">
+            <h2>Don’t miss Rocket Science blog</h2>
+            <p>
+              Nmet nullam sed habitasse dignissim viverra congue nisl. Lacus
+              purus eu, mauris pretium mollis ac id mauris eget.
+            </p>
+            <a href="#" class="button caramel-button">All stories</a>
+          </article>
+          <div class="blogs-cards-wrapper flex">
+            <article class="blog-card">
+              <div class="blog-card-image">
+                <img src="./images/blog-1.png" alt="Rocket lab boosting its space system" loading="lazy">
+              </div>
+              <div class="blog-card-content">
+                <h3>
+                  <q>Rocket lab boots its space system</q>
+                </h3>
+                <p>Nmet nullam sed habitasse dignissim viverra congue nisl. Lacus purus eu.</p>
+                <a href="#">Read story</a>
+              </div>
+            </article>
+            <article class="blog-card">
+              <div class="blog-card-image">
+                <img src="./images/blog-2.png" alt="Rocket lab boosting its space system" loading="lazy">
+              </div>
+              <div class="blog-card-content">
+                <h3>
+                  <q>Rocket lab boots its space system</q>
+                </h3>
+                <p>Nmet nullam sed habitasse dignissim viverra congue nisl. Lacus purus eu.</p>
+                <a href="#">Read story</a>
+              </div>
+            </article>
+          </div>
         </div>
       </section>
     </main>
