Add testimonial section

--- a/index.html
+++ b/index.html
@@ -186,6 +186,34 @@
           </div>
         </div>
       </section>
+      <section class="testimonial">
+        <div class="testimonial-cards-wrapper container flex items-center justify-center">
+          <article class="testimonial-card nunito-font text-center">
+            <p>
+              I brought a rocket for my son in his 14th birthday. I liked their
+              service. Love it.
+            </p>
+            <h3>Wade Warren</h3>
+            <h4>Astronaut</h4>
+          </article>
+          <article class="testimonial-card nunito-font text-center">
+            <p>
+              They delivered my custom rocket as fast as the rocket itself.
+              Mindblowing.
+            </p>
+            <h3>Esther Howard</h3>
+            <h4>Appolo 11 Pilot</h4>
+          </article>
+          <article class="testimonial-card nunito-font text-center">
+            <p>
+              I found awesome customer service from them. They fixed my rocket
+              within a day.
+            </p>
+            <h3>Cameron Williamson</h3>
+            <h4>NASA Manager</h4>
+          </article>
+        </div>
+      </section>
     </main>
   </body>
 </html>
