Add header and hero section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,36 @@
     <title>Document</title>
   </head>
   <body>
+    <header class="header container flex items-center nunito-font">
+      <a href="#maincontent" class="header-logo"> Traunship </a>
+      <nav>
+        <ul class="header-nav-list flex">
+          <li><a href="#features">Features</a></li>
+          <li><a href="#products">Products</a></li>
+          <li><a href="#testimonial">Testimonial</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+      <a href="#" class="caramel-button button">Try a demo</a>
+    </header>
     <main>
+      <section class="hero flex items-center justify-center">
+        <article class="hero-content text-center nunito-font">
+          <button class="play-button flex items-center justify-center" aria-label="Play video">
+            <img src="./images/play-button-icon.png" alt="Play button icon" />
+          </button>
+          <h1>Best place to buy rocket</h1>
+          <p>Quis ipsum pellentesque nulla nulla elementum sagittis dictum</p>
+          <ul class="hero-buttons-list flex items-center justify-center">
+            <li>
+              <a href="#" class="caramel-button button">Try a demo</a>
+            </li>
+            <li>
+              <a href="#" class="transparent-button button">Buy now</a>
+            </li>
+          </ul>
+        </article>
+      </section>
       <section class="products container nunito-font">
         <h2 class="text-center">Features you can’s avoid</h2>
         <p class="text-center">
@@ -161,25 +190,39 @@
           <div class="blogs-cards-wrapper flex">
             <article class="blog-card">
               <div class="blog-card-image">
-                <img src="./images/blog-1.png" alt="Rocket lab boosting its space system" loading="lazy">
+                <img
+                  src="./images/blog-1.png"
+                  alt="Rocket lab boosting its space system"
+                  loading="lazy"
+                />
               </div>
               <div class="blog-card-content">
                 <h3>
                   <q>Rocket lab boots its space system</q>
                 </h3>
-                <p>Nmet nullam sed habitasse dignissim viverra congue nisl. Lacus purus eu.</p>
+                <p>
+                  Nmet nullam sed habitasse dignissim viverra congue nisl. Lacus
+                  purus eu.
+                </p>
                 <a href="#">Read story</a>
               </div>
             </article>
             <article class="blog-card">
               <div class="blog-card-image">
-                <img src="./images/blog-2.png" alt="Rocket lab boosting its space system" loading="lazy">
+                <img
+                  src="./images/blog-2.png"
+                  alt="Rocket lab boosting its space system"
+                  loading="lazy"
+                />
               </div>
               <div class="blog-card-content">
                 <h3>
                   <q>Rocket lab boots its space system</q>
                 </h3>
-                <p>Nmet nullam sed habitasse dignissim viverra congue nisl. Lacus purus eu.</p>
+                <p>
+                  Nmet nullam sed habitasse dignissim viverra congue nisl. Lacus
+                  purus eu.
+                </p>
                 <a href="#">Read story</a>
               </div>
             </article>
@@ -187,7 +230,9 @@
         </div>
       </section>
       <section class="testimonial">
-        <div class="testimonial-cards-wrapper container flex items-center justify-center">
+        <div
+          class="testimonial-cards-wrapper container flex items-center justify-center"
+        >
           <article class="testimonial-card nunito-font text-center">
             <p>
               I brought a rocket for my son in his 14th birthday. I liked their
