Add ceo section

--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Discover Traunship, the best place to buy rockets. Explore our wide range of high-quality rockets designed for enthusiasts and professionals. Shop now for reliable and innovative rocket solutions."
+    />
+    <meta
+      name="keywords"
+      content="Traunship, buy rockets, best place to buy rockets, rocket store, high-quality rockets, rocket enthusiasts, professional rockets, rocket solutions, innovative rockets, reliable rockets"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -10,7 +18,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles.css" />
-    <title>Document</title>
+    <title>Traunship - Best Place to Buy Rockets</title>
   </head>
   <body>
     <header class="header container flex items-center nunito-font">
@@ -96,6 +104,17 @@
             </p>
           </article>
         </div>
+      </section>
+      <section class="ceo flex items-center">
+        <img src="./images/ceo-section-background.png" alt="CEO section background" loading="lazy">
+        <article class="nunito-font">
+          <h2><q>Right time to invest into space</q></h2>
+          <p>Nmet nullam sed habitasse dignissim viverra congue nisl. Lacus purus eu, mauris pretium mollis ac id mauris eget.</p>
+          <div class="ceo-profile flex items-center">
+            <img src="./images/milon-ask-image.png" alt="Portrait of Milon Ask" loading="lazy">
+            <h3><span>Milon Ask</span><span>CEO, Blackhole</span></h3>
+          </div>
+        </article>
       </section>
       <section class="features container nunito-font">
         <h2 class="text-center">Affordable, good quality.</h2>
