Fix the padding of a submit button

--- a/index.html
+++ b/index.html
@@ -17,12 +17,17 @@
       href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    />
     <link rel="stylesheet" href="./styles.css" />
     <title>Traunship - Best Place to Buy Rockets</title>
   </head>
   <body>
-    <header class="header container flex items-center justify-between nunito-font">
+    <header
+      class="header container flex items-center justify-between nunito-font"
+    >
       <a href="#maincontent" class="header-logo"> Traunship </a>
       <nav>
         <ul class="header-nav-list flex">
@@ -37,7 +42,10 @@
     <main>
       <section class="hero flex items-center justify-center">
         <article class="hero-content text-center nunito-font">
-          <button class="play-button flex items-center justify-center" aria-label="Play video">
+          <button
+            class="play-button flex items-center justify-center"
+            aria-label="Play video"
+          >
             <img src="./images/play-button-icon.png" alt="Play button icon" />
           </button>
           <h1>Best place to buy rocket</h1>
@@ -107,12 +115,23 @@
         </div>
       </section>
       <section class="ceo flex items-center">
-        <img src="./images/ceo-section-background.png" alt="CEO section background" loading="lazy">
+        <img
+          src="./images/ceo-section-background.png"
+          alt="CEO section background"
+          loading="lazy"
+        />
         <article class="nunito-font">
           <h2><q>Right time to invest into space</q></h2>
-          <p>Nmet nullam sed habitasse dignissim viverra congue nisl. Lacus purus eu, mauris pretium mollis ac id mauris eget.</p>
+          <p>
+            Nmet nullam sed habitasse dignissim viverra congue nisl. Lacus purus
+            eu, mauris pretium mollis ac id mauris eget.
+          </p>
           <div class="ceo-profile flex items-center">
-            <img src="./images/milon-ask-image.png" alt="Portrait of Milon Ask" loading="lazy">
+            <img
+              src="./images/milon-ask-image.png"
+              alt="Portrait of Milon Ask"
+              loading="lazy"
+            />
             <h3><span>Milon Ask</span><span>CEO, Blackhole</span></h3>
           </div>
         </article>
@@ -287,8 +306,7 @@
             <a href="#" class="footer-logo nunito-font">Traunship</a>
             <ul class="flex nunito-font">
               <li>
-                <a href="#">4517 Washington Ave. Manchester,
-                  Kentucky 39495</a>
+                <a href="#">4517 Washington Ave. Manchester, Kentucky 39495</a>
               </li>
               <li>
                 <a href="#">(684) 555-0102</a>
@@ -301,23 +319,32 @@
           <div class="footer-column-links nunito-font">
             <h3>Quick Links</h3>
             <nav>
-                <ul class="flex">
-                  <li><a href="#features">Features</a></li>
-                  <li><a href="#products">Products</a></li>
-                  <li><a href="#testimonial">Testimonial</a></li>
-                  <li><a href="#contact">Contact</a></li>
-                </ul>
+              <ul class="flex">
+                <li><a href="#features">Features</a></li>
+                <li><a href="#products">Products</a></li>
+                <li><a href="#testimonial">Testimonial</a></li>
+                <li><a href="#contact">Contact</a></li>
+              </ul>
             </nav>
           </div>
           <div class="footer-form-container nunito-font">
             <h3>Newsletter</h3>
             <form action="#" class="footer-form">
-            <p>We send updates in every week</p>
-            <div class="inputs-wrapper flex">
-              <input class="email-input" type="email" placeholder="Email Address" required>
-            <input class="submit-input button caramel-button" type="submit" value="Go">
-            </div>
-          </form>
+              <p>We send updates in every week</p>
+              <div class="inputs-wrapper flex items-center">
+                <input
+                  class="email-input"
+                  type="email"
+                  placeholder="Email Address"
+                  required
+                />
+                <input
+                  class="submit-input button caramel-button"
+                  type="submit"
+                  value="Go"
+                />
+              </div>
+            </form>
           </div>
         </div>
         <span class="footer-line"></span>
@@ -325,16 +352,24 @@
           <p class="nunito-font">© 2021 Traunship. All right reserved.</p>
           <ul class="social-links flex">
             <li>
-              <a href="#" aria-label="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
+              <a href="#" aria-label="Facebook"
+                ><i class="fa-brands fa-facebook-f"></i
+              ></a>
             </li>
             <li>
-              <a href="#" aria-label="Twitter"><i class="fa-brands fa-x-twitter"></i></a>
+              <a href="#" aria-label="Twitter"
+                ><i class="fa-brands fa-x-twitter"></i
+              ></a>
             </li>
             <li>
-              <a href="#" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
+              <a href="#" aria-label="Instagram"
+                ><i class="fa-brands fa-instagram"></i
+              ></a>
             </li>
             <li>
-              <a href="#" aria-label="LinkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
+              <a href="#" aria-label="LinkedIn"
+                ><i class="fa-brands fa-linkedin-in"></i
+              ></a>
             </li>
           </ul>
         </div>
